<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CallTaxiTimeoutStr" />

    <Button
        android:id="@+id/keep_wait_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/KeepWaitingStr" />

    <Button
        android:id="@+id/cancel_call_taxi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CancelCallTaxiStr" />

</LinearLayout>